PPD selection dialog hangs with "g_signal_connect_object: assertion 'G_IS_OBJECT (gobject)' failed"
When attempting to add a printer, gnome-control-center hangs after displaying "Select Printer Driver" dialog.
Steps to reproduce:
- Open GNOME Settings
- Select "Printers"
- Click "Unlock...", authenticate if required
- Click "Add a Printer..."
- Enter IP address for network printer in search field
- In this case, select JetDirect-Printer that appears in the list (LPD printer fails in the same manner)
- Click "Add" button
Actual results: gnome-control-center hangs, cannot cancel the "Select Printer Driver" step. You can change the selected manufacturer, but nothing changes.
Expected results: The device list to populate after a manufacturer is selected, or at the very least to be able to cancel the add printer operation.
This is reproducible when adding any kind of printer type that requires manually selecting a PPD. This bug has also been submitted to Fedora[0].
The issue goes away when 4502673b is reverted for pp-ppd-selection-dialog.c.
Edited by Brandon Nielsen