panels/printers/pp-ppd-selection-dialog.c
@@ -51,18 +51,70 @@ enum
 
 
 struct _PpPPDSelectionDialog {
-  GtkBuilder *builder;
-  GtkWidget  *dialog;
+	GObject parent_instance;
 
-  UserResponseCallback user_callback;
-  gpointer             user_data;
+	GtkBuilder *builder;
+	GtkWidget  *dialog;
 
-  gchar           *ppd_name;
-  gchar           *ppd_display_name;
-  gchar           *manufacturer;
+	UserResponseCallback user_callback;
+	gpointer             user_data;
 
-  PPDList *list;
+	gchar           *ppd_name;
+	gchar           *ppd_display_name;
+	gchar           *manufacturer;
+
+	PPDList *list;
 };
+
+G_DEFINE_TYPE (PpPPDSelectionDialog, pp_ppd_selection_dialog, G_TYPE_OBJECT)
+
+static void populate_dialog (PpPPDSelectionDialog *self);
+
+static void pp_ppd_selection_dialog_finalize (GObject *object);
+
+static void
+pp_ppd_selection_dialog_class_init (PpPPDSelectionDialogClass *klass)
+{
+  GObjectClass *object_class;
+
+  object_class = G_OBJECT_CLASS (klass);
+  object_class->finalize = pp_ppd_selection_dialog_finalize;
+}
+
+
+PpPPDSelectionDialog *
+pp_ppd_selection_dialog_new (GtkWindow            *parent,
+                             PPDList              *ppd_list,
+                             const gchar          *manufacturer,
+                             UserResponseCallback  user_callback,
+                             gpointer              user_data)
+{
+  PpPPDSelectionDialog *self;
+  GtkWidget            *widget;
+  g_autoptr(GError)     error = NULL;
+
+	self = g_object_new (PP_TYPE_PPD_SELECTION_DIALOG, NULL);
+
+  self->user_callback = user_callback;
+  self->user_data = user_data;
+
+  self->list = ppd_list_copy (ppd_list);
+
+  self->manufacturer = get_standard_manufacturers_name (manufacturer);
+
+  gtk_window_set_transient_for (GTK_WINDOW (self->dialog), GTK_WINDOW (parent));
+
+  widget = (GtkWidget*)
+    gtk_builder_get_object (self->builder, "ppd-spinner");
+  gtk_spinner_start (GTK_SPINNER (widget));
+
+	populate_dialog (self);
+
+  gtk_window_present (GTK_WINDOW (self->dialog));
+  gtk_widget_show_all (GTK_WIDGET (self->dialog));
+
+  return PP_PPD_SELECTION_DIALOG (self);
+}
 
 static void
 manufacturer_selection_changed_cb (PpPPDSelectionDialog *self)
@@ -314,20 +366,12 @@ ppd_selection_dialog_response_cb (PpPPDSelectionDialog *self,
   self->user_callback (GTK_DIALOG (self->dialog), response_id, self->user_data);
 }
 
-PpPPDSelectionDialog *
-pp_ppd_selection_dialog_new (GtkWindow            *parent,
-                             PPDList              *ppd_list,
-                             const gchar          *manufacturer,
-                             UserResponseCallback  user_callback,
-                             gpointer              user_data)
+static void
+pp_ppd_selection_dialog_init (PpPPDSelectionDialog *self)
 {
-  PpPPDSelectionDialog *self;
-  GtkWidget            *widget;
   g_autoptr(GError)     error = NULL;
   gchar                *objects[] = { "ppd-selection-dialog", NULL };
   guint                 builder_result;
-
-  self = g_new0 (PpPPDSelectionDialog, 1);
 
   self->builder = gtk_builder_new ();
 
@@ -338,49 +382,30 @@ pp_ppd_selection_dialog_new (GtkWindow            *parent,
   if (builder_result == 0)
     {
       g_warning ("Could not load ui: %s", error->message);
-      return NULL;
     }
 
   self->dialog = (GtkWidget *) gtk_builder_get_object (self->builder, "ppd-selection-dialog");
-  self->user_callback = user_callback;
-  self->user_data = user_data;
-
-  self->list = ppd_list_copy (ppd_list);
-
-  self->manufacturer = get_standard_manufacturers_name (manufacturer);
 
   /* connect signals */
   g_signal_connect (self->dialog, "delete-event", G_CALLBACK (gtk_widget_hide_on_delete), NULL);
   g_signal_connect_object (self->dialog, "response", G_CALLBACK (ppd_selection_dialog_response_cb), self, G_CONNECT_SWAPPED);
-
-  gtk_window_set_transient_for (GTK_WINDOW (self->dialog), GTK_WINDOW (parent));
-
-  widget = (GtkWidget*)
-    gtk_builder_get_object (self->builder, "ppd-spinner");
-  gtk_spinner_start (GTK_SPINNER (widget));
-
-  populate_dialog (self);
-
-  gtk_window_present (GTK_WINDOW (self->dialog));
-  gtk_widget_show_all (GTK_WIDGET (self->dialog));
-
-  return self;
 }
 
-void
-pp_ppd_selection_dialog_free (PpPPDSelectionDialog *self)
+static void
+pp_ppd_selection_dialog_finalize (GObject *object)
 {
-  gtk_widget_destroy (GTK_WIDGET (self->dialog));
+	PpPPDSelectionDialog *self = PP_PPD_SELECTION_DIALOG (object);
 
   g_clear_object (&self->builder);
+	g_clear_pointer (&self->dialog, gtk_widget_destroy);
 
-  g_free (self->ppd_name);
+	g_clear_pointer (&self->ppd_name, g_free);
+	g_clear_pointer (&self->ppd_name, g_free);
+	g_clear_pointer (&self->ppd_display_name, g_free);
 
-  g_free (self->ppd_display_name);
+	g_clear_pointer (&self->list, ppd_list_free);
 
-  g_free (self->manufacturer);
-
-  g_free (self);
+	G_OBJECT_CLASS (pp_ppd_selection_dialog_parent_class)->finalize (object);
 }
 
 gchar *
